fix gtest conda

--- a/occt-utils/tests/CMakeLists.txt
+++ b/occt-utils/tests/CMakeLists.txt
@@ -2,8 +2,8 @@ project(occt-utils_tests LANGUAGES CXX)
 #
 # GTest
 #
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS})
+enable_testing()
+include_directories(${CONDA_PREFIX}/Library/include)
 #
 # current tested lib
 # 
@@ -14,8 +14,12 @@ link_directories(${CMAKE_BINARY_DIR})
 file(GLOB SRC_LIST "tests_*")
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} 
-                            GTest::GTest 
-                            GTest::Main 
+                            # GTest::GTest 
+                            # GTest::Main 
+                            optimized gtest_dll
+                            debug gtest_dlld
+                            # optimized gtest_main
+                            # debug gtest_maind
                             ${OpenCASCADE_LIBRARIES} 
                             occt-utils 
                     )
