remove duplicate code with a function

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,16 +27,8 @@ target_link_libraries(${PROJECT_NAME}
                             gbs_render
                     )
 
-#
-# set output dirs (vs is a pain)
-#
 if ( MSVC )
-    foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
-        string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-    endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
+    SET_OUT_DIR(${PROJECT_NAME} ${CMAKE_BINARY_DIR})
 endif ( MSVC )
 
 vtk_module_autoinit(
