--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,21 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 #
+# set output dirs (vs is a pain)
+#
+function(SET_OUT_DIR REQUIRED_ARG)
+    list(GET ARGV 0 TARGET_NAME)
+    list(GET ARGV 1 OUT_DIR)
+    message(${TARGET_NAME})
+    message(${OUT_DIR})
+    foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
+        string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
+        set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
+        set_property(TARGET ${PROJECT_NAME} PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
+        set_property(TARGET ${PROJECT_NAME} PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
+    endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
+endfunction()
+#
 # CODAN ENV
 #
 if(EXISTS $ENV{LIBRARY_PREFIX})
