--- a/occt-utils/CMakeLists.txt
+++ b/occt-utils/CMakeLists.txt
@@ -11,16 +11,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
 file(GLOB OCCT_UTILS_SRC_LIST "*.cpp")
 add_library(${PROJECT_NAME} SHARED ${OCCT_UTILS_SRC_LIST})
 target_link_libraries(${PROJECT_NAME} ${OpenCASCADE_LIBRARIES})
-#
-# set output dirs (vs is a pain)
-#
+
 if ( MSVC )
-    foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
-        string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-    endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
+    SET_OUT_DIR(${PROJECT_NAME} ${CMAKE_BINARY_DIR})
 endif ( MSVC )
 #
 # tests
