--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,9 @@ function(SET_OUT_DIR REQUIRED_ARG)
     message(${OUT_DIR})
     foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
         string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
+        set_property(TARGET ${TARGET_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUT_DIR} )
+        set_property(TARGET ${TARGET_NAME} PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUT_DIR} )
+        set_property(TARGET ${TARGET_NAME} PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUT_DIR} )
     endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
 endfunction()
 #
@@ -41,6 +41,29 @@ elseif(EXISTS $ENV{CONDA_PREFIX})
 else()
     message(FATAL_ERROR "A conda environement is required")
 endif()
+#
+# set install dir
+#
+function(SET_INSTALL_DIR_COMPILED REQUIRED_ARG)
+    list(GET ARGV 0 TARGET_NAME)
+    if(WIN32)
+            set(INSTALL_DIR ${CONDA_PREFIX}/Library)
+            install(TARGETS ${TARGET_NAME} 
+                LIBRARY  DESTINATION ${LIBRARY_LIB}
+                RUNTIME  DESTINATION ${LIBRARY_BIN}
+                INCLUDES DESTINATION ${LIBRARY_INC}
+            )
+            install(EXPORT MyLibTargets
+                            FILE ${TARGET_NAME}.cmake
+                            NAMESPACE GBS::
+                            DESTINATION ${LIBRARY_LIB}/cmake/MyLib
+         )
+    else()
+            install(TARGETS ${TARGET_NAME}  
+            LIBRARY DESTINATION $ENV{LD_RUN_PATH}
+            )
+    endif()
+endfunction()
 
 include_directories(${LIBRARY_INC})
 link_directories(${LIBRARY_BIN})
@@ -50,6 +73,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 #
 # Boost
 # 
+# set(BOOST_DIR ${LIBRARY_LIB}/cmake/Boost-1.74.0)
+# set(Boost_INCLUDE_DIR ${LIBRARY_INC})
 find_package(Boost REQUIRED)
 #
 # eigen
@@ -83,11 +108,11 @@ add_compile_definitions(_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING) 
 link_directories(${CMAKE_BINARY_DIR})
 ############
 if(${GBS_BUILD_TESTS} OR ${USE_OCCT_UTILS})
-    add_subdirectory(occt-utils)
+    add_subdirectory(gbs-occt)
 endif(${GBS_BUILD_TESTS} OR ${USE_OCCT_UTILS})
 
 if(${USE_RENDER})
-    add_subdirectory(render)
+    add_subdirectory(gbs-render)
 endif(${USE_RENDER})
 
 if(${GBS_BUILD_TESTS})
