--- a/gbs-occt/CMakeLists.txt
+++ b/gbs-occt/CMakeLists.txt
@@ -23,3 +23,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 if(${GBS_BUILD_TESTS})
     add_subdirectory(tests)
 endif(${GBS_BUILD_TESTS})
+
+SET_INSTALL_DIR(${PROJECT_NAME})
