--- a/gbs-occt/CMakeLists.txt
+++ b/gbs-occt/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17.0)
 
-project(gbs-occt LANGUAGES CXX)
+project(occt LANGUAGES CXX)
 # 
 # gbslib
 #
@@ -9,11 +9,11 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
 # set files fo lib
 # 
 file(GLOB OCCT_UTILS_SRC_LIST "*.cpp")
-add_library(${PROJECT_NAME} SHARED ${OCCT_UTILS_SRC_LIST})
-target_link_libraries(${PROJECT_NAME} ${OpenCASCADE_LIBRARIES})
+add_library(gbs-${PROJECT_NAME} SHARED ${OCCT_UTILS_SRC_LIST})
+target_link_libraries(gbs-${PROJECT_NAME} ${OpenCASCADE_LIBRARIES})
 
 if ( MSVC )
-    SET_OUT_DIR(${PROJECT_NAME} ${CMAKE_BINARY_DIR})
+    SET_OUT_DIR(gbs-${PROJECT_NAME} ${CMAKE_BINARY_DIR})
 endif ( MSVC )
 #
 # tests
@@ -24,4 +24,4 @@ if(${GBS_BUILD_TESTS})
     add_subdirectory(tests)
 endif(${GBS_BUILD_TESTS})
 
-SET_INSTALL_DIR(${PROJECT_NAME})
+SET_INSTALL_DIR(gbs-${PROJECT_NAME})
