--- a/gbs-render/CMakeLists.txt
+++ b/gbs-render/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17.0)
 
-project(gbs-render LANGUAGES CXX)
+project(render LANGUAGES CXX)
 # 
 # gbslib
 #
@@ -10,20 +10,12 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
 # 
 file(GLOB GBS_RENDER_SRC_LIST "*.cpp")
 message( ${GBS_RENDER_SRC_LIST})
-add_library(${PROJECT_NAME} SHARED ${GBS_RENDER_SRC_LIST})
-target_link_libraries(${PROJECT_NAME} 
+add_library(gbs-${PROJECT_NAME} SHARED ${GBS_RENDER_SRC_LIST})
+target_link_libraries(gbs-${PROJECT_NAME} 
     ${VTK_LIBRARIES}
 )
-#
-# set output dirs (vs is a pain)
-#
 if ( MSVC )
-    foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
-        string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-        set_property(TARGET ${PROJECT_NAME} PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
-    endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
+    SET_OUT_DIR(gbs-${PROJECT_NAME} ${CMAKE_BINARY_DIR})
 endif ( MSVC )
 #
 # tests
@@ -36,8 +28,8 @@ if(${GBS_BUILD_TESTS})
 endif(${GBS_BUILD_TESTS})
 
 vtk_module_autoinit(
-        TARGETS ${PROJECT_NAME}
+        TARGETS gbs-${PROJECT_NAME}
         MODULES ${VTK_LIBRARIES}
 )
 
-SET_INSTALL_DIR(${PROJECT_NAME})
+SET_INSTALL_DIR(gbs-${PROJECT_NAME})
