--- a/gbs-render/CMakeLists.txt
+++ b/gbs-render/CMakeLists.txt
@@ -1,35 +1,26 @@
 cmake_minimum_required(VERSION 3.17.0)
 
-project(render LANGUAGES CXX)
-# 
+project(gbs-render LANGUAGES CXX)
+
 # gbslib
-#
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
-# 
-# set files fo lib
-# 
+include_directories(${CMAKE_SOURCE_DIR})
+
 file(GLOB GBS_RENDER_SRC_LIST "*.cpp")
-message( ${GBS_RENDER_SRC_LIST})
-add_library(gbs-${PROJECT_NAME} SHARED ${GBS_RENDER_SRC_LIST})
-target_link_libraries(gbs-${PROJECT_NAME} 
+add_library(${PROJECT_NAME} SHARED ${GBS_RENDER_SRC_LIST})
+target_link_libraries(${PROJECT_NAME} 
     ${VTK_LIBRARIES}
 )
-if ( MSVC )
-    SET_OUT_DIR(gbs-${PROJECT_NAME} ${CMAKE_BINARY_DIR})
-endif ( MSVC )
-#
-# tests
-#
-# add current dir for include in tests
 
+# tests
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 if(${GBS_BUILD_TESTS})
     add_subdirectory(tests)
 endif(${GBS_BUILD_TESTS})
 
 vtk_module_autoinit(
-        TARGETS gbs-${PROJECT_NAME}
+        TARGETS ${PROJECT_NAME}
         MODULES ${VTK_LIBRARIES}
 )
 
-SET_INSTALL_DIR(gbs-${PROJECT_NAME})
+install(TARGETS ${PROJECT_NAME})
+INSTALL_HEADERS(${PROJECT_NAME})
