--- a/gbs-occt/CMakeLists.txt
+++ b/gbs-occt/CMakeLists.txt
@@ -11,7 +11,9 @@ target_link_libraries(${PROJECT_NAME} ${OpenCASCADE_LIBRARIES})
 
 install(TARGETS ${PROJECT_NAME})
 INSTALL_HEADERS(${PROJECT_NAME})
-
+if ( MSVC )
+        SET_OUT_DIR(${PROJECT_NAME} ${CMAKE_BINARY_DIR})
+endif ( MSVC )
 # tests
 # add current dir for include in tests
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
