--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,7 +23,9 @@ target_link_libraries(${PROJECT_NAME}
                         )
 
 install(TARGETS ${PROJECT_NAME})
-
+if ( MSVC )
+        SET_OUT_DIR(${PROJECT_NAME} ${CMAKE_BINARY_DIR})
+endif ( MSVC )
 vtk_module_autoinit(
         TARGETS ${PROJECT_NAME}
         MODULES ${VTK_LIBRARIES}
