--- a/tests_3rdlibs/CMakeLists.txt
+++ b/tests_3rdlibs/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.17.0)
 
-project(gbslib_tests LANGUAGES CXX)
+project(gbslib_tests_3rdlibs LANGUAGES CXX)
 
 add_definitions(-D_USE_MATH_DEFINES)
 
+find_package(OPENMESH REQUIRED)
 
 # gslib
 include_directories(${CMAKE_SOURCE_DIR})
@@ -19,9 +20,14 @@ target_link_libraries(${PROJECT_NAME}
                             debug gtest_dlld
                             ${OpenCASCADE_LIBRARIES} 
                             gbs-occt
+                            sundials_kinsol
                             nlopt
                             ${VTK_LIBRARIES}
                             gbs-render
+                            optimized OpenMeshCore
+                            optimized OpenMeshTools
+                            debug OpenMeshCored
+                            debug OpenMeshToolsd
                         )
 
 install(TARGETS ${PROJECT_NAME})
