expose BSCFunction to python

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -13,9 +13,21 @@ execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "from distutils.sysconfig import
 set(SP_DIR "${PY_SP_DIR}" CACHE PATH "Site-package directory")
 message("  -> site-packages: " ${SP_DIR})
 
+# file(GLOB SRC_LIST "pybind_*")
+
 find_package(pybind11 REQUIRED)
-pybind11_add_module(${PROJECT_NAME} gbsbind.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE nlopt)
+pybind11_add_module(
+        ${PROJECT_NAME} 
+        gbsbind.cpp 
+        # ${SRC_LIST}
+)
+target_link_libraries(${PROJECT_NAME} PRIVATE nlopt ${VTK_LIBRARIES} gbs-render)
+
+vtk_module_autoinit(
+        TARGETS  ${PROJECT_NAME} 
+        MODULES ${VTK_LIBRARIES}
+        )
+
 
 install(TARGETS ${PROJECT_NAME} 
         DESTINATION ${SP_DIR})
