add more python wrapping

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,8 @@ find_package(VTK COMPONENTS
             RenderingOpenGL2
             RenderingAnnotation
             IOXML 
+            Python
+            WrappingPythonCore
             )
 
 # occt
