--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: gbs
-  version:  0.0.0.5
+  version:  0.0.0.6
 
 source:  
   # git_url: https://github.com/ssg-aero/gbs.git
@@ -51,4 +51,4 @@ about:
   license: LGPL3
 test:
   imports:
-    - pygbs
+    - pygbs.gbs
