--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -13,7 +13,7 @@ pybind11_add_module(
         gbsbind.cpp 
         # ${SRC_LIST}
 )
-target_link_libraries(${PROJECT_NAME} PRIVATE nlopt ${VTK_LIBRARIES} gbs-render)
+target_link_libraries(${PROJECT_NAME} PRIVATE NLopt::nlopt ${VTK_LIBRARIES} gbs-render)
 
 vtk_module_autoinit(
         TARGETS  ${PROJECT_NAME} 
