--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: gbs
-  version:  0.0.0.6
+  version:  0.0.0.7
 
 source:  
   git_url: https://github.com/ssg-aero/gbs.git
@@ -16,7 +16,8 @@ requirements:
     - libiges # for copy
   host:
     # - vs2019_win-64
-    - python
+    - python=3.9
+    - python-devtools
     - pybind11
     # - occt >=7.4
     # - tbb
@@ -25,7 +26,7 @@ requirements:
     - vtk >=9.0
     - eigen
     - boost >=1.74
-    - gtest
+    # - gtest
     # - sundials 
     - sphinx
     # - sphinx-rtd-theme
@@ -35,7 +36,7 @@ requirements:
     - fmt
     - libiges
   run:
-    - python
+    - python=3.9
     - pytest
     - boost >=1.74
     - nlopt
@@ -45,7 +46,7 @@ requirements:
     - fmt
     - libiges
     - jupyterlab
-    - pytreejs
+    - pythreejs
     - pyvista
     # - occt >=7.4
     # - tbb
