--- a/gbs-render/tests/CMakeLists.txt
+++ b/gbs-render/tests/CMakeLists.txt
@@ -3,12 +3,8 @@ project(gbs-render_tests LANGUAGES CXX)
 file(GLOB SRC_LIST "tests_*")
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} 
-                            # GTest::GTest 
-                            # GTest::Main 
-                            optimized gtest_dll
-                            debug gtest_dlld
-                            # optimized gtest_main
-                            # debug gtest_maind
+                            GTest::gtest
+                            GTest::gtest_main
                             ${OpenCASCADE_LIBRARIES} 
                             gbs-render 
                             NLopt::nlopt
